@@ -4,6 +4,8 @@ Version 1.5.9 (?? December 2012):
 
    New features:
      * cdo option -z zip: added optional compression level -z zip[_1-9]
+   Changed operators:
+     * enlarge: added missing value support
    Fixed bugs:
      * wrong result for user defined lonlat grids with xfirst < 0
        (This bug was introduced in CDO version 1.5.8)
