@@ -3,9 +3,13 @@
 	* using CDI library version 1.5.9
 	* Version 1.5.9 released
 
+2012-11-21 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
+
+	* enlarge: added missing value support [request: Chris Fletcher]
+
 2012-11-15 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
 
-	* Split: added parameter swap to swap the position of <obase> and <xxx>  in the filename 
+	* Split: added parameter swap to swap the position of <obase> and <xxx>  in the filename
 	* splitgrid: bug fix for gridID output in filename <xxx>
 	* splitzaxis: bug fix for zaxisID output in filename <xxx>
 
